[workspace]
members = ["blackbox_bench"]

[package]
name = "dbeel"
version = "0.1.0"
edition = "2021"
authors = ["Tony Solomonik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
bincode = "1.3.3"
clap = { version = "4.2.7", features = ["derive"] }
enum_to_num = { path = "enum_to_num" }
futures = "0.3.28"
futures-lite = "1.12.0"
glommio = "0.8.0"
log = "0.4.17"
murmur3 = "0.5.2"
once_cell = "1.17.1"
pin-project-lite = "0.2.9"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
redblacktree = { path = "redblacktree" }
regex = "1.7.1"
rmp = "0.8.11"
rmpv = "1.0.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.40"
time = { version = "0.3.22", features = ["serde"] }
wtinylfu = "0.1.0"

[dev-dependencies]
color-backtrace = "0.5.1"
ctor = "0.2.3"
tempfile = "3.4.0"
test_utils = { path = "test_utils" }
dbeel_client = { path = "dbeel_client" }
rstest = "0.18.1"
serial_test = "2.0.0"
