[workspace]
members = [
  "blackbox_bench",
  "dbeel_client",
  "from_num",
  "redblacktree",
  "test_utils",
]

[package]
name = "dbeel"
version = "0.1.0"
edition = "2021"
authors = ["Tony Solomonik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[features]
flow-events = []

[dependencies]
async-channel = "1.8.0"
bincode = "1.3.3"
bloomfilter = { version = "1.0.12", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
event-listener = "3.0.0"
from-num = { path = "from_num" }
futures = "0.3.28"
futures-lite = "1.12.0"
glommio = { git = "https://github.com/tontinton/glommio.git", branch = "my-master" }
itertools = "0.11.0"
kinded = "0.3.0"
log = "0.4.17"
murmur3 = "0.5.2"
once_cell = "1.17.1"
pin-project-lite = "0.2.9"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
redblacktree = { path = "redblacktree" }
regex = "1.7.1"
rmp = "0.8.11"
rmp-serde = "1.1.2"
rmpv = "1.0.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.40"
time = { version = "0.3.22", features = ["serde"] }
wtinylfu = "0.1.0"

[dev-dependencies]
color-backtrace = "0.5.1"
ctor = "0.2.3"
tempfile = "3.4.0"
test-utils = { path = "test_utils" }
dbeel-client = { path = "dbeel_client" }
rstest = "0.18.1"
serial_test = "2.0.0"
dbeel = { path = ".", features = ["flow-events"] }
event-listener = "3.0.0"
