[package]
name = "blackbox_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
futures = "0.3.28"
futures-lite = "1.12.0"
glommio = "0.8.0"
murmur3 = "0.5.2"
rand = "0.8.5"
rmpv = "1.0.0"
