[package]
name = "blackbox_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
dbeel-client = { path = "../dbeel_client", default-features = false, features = ["glommio"] }
futures = "0.3.28"
glommio = { git = "https://github.com/tontinton/glommio.git", branch = "my-master" }
rand = "0.8.5"
rmpv = "1.0.0"
