[package]
name = "dbeel_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbeel = { path = ".." }
futures-lite = "1.13.0"
glommio = { git = "https://github.com/tontinton/glommio.git", branch = "my-master" }
rmp-serde = "1.1.2"
rmpv = "1.0.0"
rpm = "0.12.0"
serde = "1.0.175"
thiserror = "1.0.44"
