[package]
name = "dbeel-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
glommio = ["dep:glommio", "dep:futures-lite"]

[dependencies]
async-rwlock = "1.3.0"
dbeel = { path = ".." }
futures-lite = { version = "1.13.0", optional = true }
glommio = { git = "https://github.com/tontinton/glommio.git", branch = "my-master", optional = true }
rmp-serde = "1.1.2"
rmpv = "1.0.0"
rpm = "0.12.0"
serde = "1.0.175"
thiserror = "1.0.44"
tokio = { version = "1.33.0", features = ["net", "io-util", "time"], optional = true }
