[package]
name = "mongo-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
mongodb = "2.7.1"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }
