[package]
name = "rbtree-arena"
version = "0.1.0"
edition = "2021"
description = "A cache friendly red black tree where nodes live on sequential memory."
authors = ["Tony Solomonik @ tony.solomonik@gmail.com"]
repository = "https://github.com/tontinton/dbeel/rbtree_arena"
homepage = "https://github.com/tontinton/dbeel/rbtree_arena"
keywords = ["library", "tree", "rust"]
categories = ["data-structures", "algorithms"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
