[package]
name = "stupid-from-num"
version = "0.1.0"
edition = "2021"
description = "Auto implement From trait on an enum."
authors = ["Tony Solomonik @ tony.solomonik@gmail.com"]
repository = "https://github.com/tontinton/dbeel/stupid_from_num"
homepage = "https://github.com/tontinton/dbeel/stupid_from_num"
keywords = ["library", "derive", "rust"]
categories = []
readme = "./README.md"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.31"
syn = "2.0.27"
