[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
dbeel = { path = ".." }
futures = "0.3.28"
glommio = { git = "https://github.com/tontinton/glommio.git", branch = "my-master" }
pretty_env_logger = "0.5.0"
