[package]
name = "tokio-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
dbeel-client = { path = "../dbeel_client", features = ["tokio"] }
rmpv = "1.0.0"
tokio = { version = "1.33.0", features = ["full"] }
